# shared_data

./: CMakeLists.txt  README.md
config/: README.md  data.txt  multicast.cfg
include/: shared_data.h
src/: multicast.c  shared_data.c
test/: README.md
test/ex_test1/: CMakeLists.txt  README.md
test/ex_test1/src/: shmem1.c  shmem2.c
